# Orbiters

./: .gitignore  CMakeLists.txt  Index.qml  Orbiters.pro  README.md  Resources.qrc  appmanager.cpp  datentime.h  js.qrc  main.cpp  main.qml  qml.qrc  qmlengine.h
Components/: Home.qml
Router/: loader.cpp
app/: qmlengine.cpp  qmlengine.h
app/Router/: loader.h
qml/: Bargraph.qml  Deck.qml  Header.qml  Home.qml  Index.qml  Login.qml  MessagePalette.qml  PaletteMsg.qml  Searchbar.qml  main.qml
src/: main.cpp
src/app/: appmanager.cpp  appmanager.h  configure.h  qmlengine.h
src/system/: system.cpp  system.h
src/utility/: datentime.cpp
